# Genexis

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  build.sh  org.gxgx.genexis.desktop  org.gxgx.genexis.metainfo.xml
src/: gxbindings.rs  main.rs
src/qml/: Main.qml
src/qml/pages/: Build.qml  GxBuild.qml  Home.qml  NandFlash.qml  Settings.qml  TimingFlash.qml
src/qml/pages/panels/: Blockmap.qml  FlasherInfo.qml  GxBuildPanel.qml  NandInfo.qml  NandSelector.qml  TimingSelector.qml
