[package]
name = "genexis"
version = "0.0.1"
authors = [ "ExposureMG <exposuremg@protonmail.com>" ]
edition = "2021"
license = "Unlicensed"

[dependencies]
cxx = "1.0.192"
cxx-qt = "0.8.0"
cxx-qt-lib = { version = "0.8.0",  features = ["qt_full"] }
cxx-qt-lib-extras = "0.8"
gxbuild = { git = "https://github.com/ExposureMG/gxBuild" }
markdown = "1.0"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = [ "link_qt_object_files" ] }
